fix subscriptions feature for php8 and add mailhog

--- a/libs/templates/email_status_update.html
+++ b/libs/templates/email_status_update.html
@@ -52,5 +52,5 @@
 </tr>
 </tbody>
 </table>
-<p style="text-align: center;"><a href="%url%/?do=unsubscribe&amp;token=%token%"><sub><sup>%unsubscribe%</sup></sub></a></p>
+<p style="text-align: center;"><a href="%url%/?do=unsubscribe&amp;type=2&amp;token=%token%"><sub><sup>%unsubscribe%</sup></sub></a></p>
 <p style="text-align: center;"><a href="%url%"><img src="%url%/favicon/apple-icon-57x57.png" alt="" />&nbsp;%powered_by%&nbsp;Server-Status</a></p>
